--- a/api/java/build.gradle
+++ b/api/java/build.gradle
@@ -1,10 +1,16 @@
 plugins {
-  id "java-library"
   id "org.jsonschema2pojo" version "1.2.2"
 }
 
 jsonSchema2Pojo { // https://github.com/joelittlejohn/jsonschema2pojo/tree/master/jsonschema2pojo-gradle-plugin
   targetPackage = 'hwb'
+}
+
+tasks.getByName("sourcesJar").dependsOn("generateJsonSchema2Pojo")
+
+tasks.named('test') {
+  // Use JUnit Platform for unit tests.
+  useJUnitPlatform()
 }
 
 dependencies {
