--- a/build.gradle
+++ b/build.gradle
@@ -1,212 +1,304 @@
+buildscript {
+    ext.repos = {
+        mavenLocal()
+        mavenCentral()
+        google()
+        maven {
+            url "https://javacard.pro/maven/"
+            content {
+                includeGroup "com.github.martinpaljak"
+            }
+        }
+
+    }
+
+    repositories repos
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.13.0'
+    }
+}
 
 plugins {
-    id 'com.github.ben-manes.versions' version '0.53.0' apply false // ./gradlew dependencyUpdates
-    id 'org.jreleaser' version '1.20.0' apply false
+    id 'com.github.ben-manes.versions' version '0.51.0' apply false // ./gradlew dependencyUpdates
+    id('io.github.gradle-nexus.publish-plugin') version '2.0.0'
 }
 
 def buildProjects() {
     subprojects.findAll { new File(it.projectDir, 'build.gradle').file }
 }
 
-def platformProjects() {
-    buildProjects().findAll { it.name.equals("bom") }
+def javaLibraryProjects() {
+    subprojects.findAll { it.name.endsWith("-java-lib")}
 }
 
-def exampleProjects() {
-    buildProjects().findAll { it.name.endsWith("-example") }
+def androidLibraryProjects() {
+    subprojects.findAll { it.name.endsWith("-android-lib")}
 }
 
-def libraryProjects() {
-    buildProjects().findAll { !exampleProjects().contains(it) && !platformProjects().contains(it) }
-}
 
-def jvmProjects() {
-    buildProjects().findAll { !platformProjects().contains(it) }
-}
-
-ext.stagingRepositoryPath = "${rootDir.getCanonicalFile()}/build/staging-deploy"
-
-// projects which should be published
-configure(libraryProjects()) {
-    apply plugin: 'java-library'
-    apply plugin: 'maven-publish'
-
-    java {
-        withSourcesJar()
-        withJavadocJar()
-
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+allprojects {
+    // skip checking test configurations (like lint) or test libraries for vulnerabilities
+    buildscript {
+        repositories repos
     }
+    repositories repos
+}
 
-    publishing {
+ext {
+    jacksonVersion = '2.20.1'
+    junitVersion = '4.13.2'
+}
 
-        publications {
-            maven(MavenPublication) {
-                from components.java
-
-                groupId = "$group"
-                artifactId = project.name
-
-                if(project.ext.has('artifactId')) {
-                    System.out.println("Publishing " + project.name + " with artifact-id " + project.ext.artifactId)
-                }
-
-                pom {
-                    name = "${!project.ext.has('artifactId') ? project.name : project.ext.artifactId}"
-                    url = 'https://github.com/entur/hwb-utilities'
-                    packaging = 'jar'
-                    inceptionYear = '2025'
-                    description = project.name
-
-                    licenses {
-                        license {
-                            name = 'European Union Public Licence v1.2'
-                            url = 'https://www.eupl.eu/'
-                            distribution = 'repo'
-                        }
-                    }
-                    developers {
-                        developer {
-                            id = "skjolber"
-                            name = "Thomas Skjølberg"
-                            email = "thomas.rorvik.skjolberg@entur.org"
-                        }
-                    }
-                    scm {
-                        url = 'https://github.com/entur/hwb-utilities'
-                        connection = 'git@github.com:entur/hwb-utilities.git'
-                    }
-                }
-            }
-        }
-
-        repositories {
-            maven {
-                url = stagingRepositoryPath
-            }
-        }
-    }
+ext.commonDependencies = {
 
 }
 
-configure(jvmProjects()) {
+configure(buildProjects()) {
     apply plugin: 'com.github.ben-manes.versions'
 
-    ext {
-        jacksonVersion = '2.20.1'
-        junitJupiterVersion = '5.12.2'
-        mockitoVersion = '5.20.0'
-        googleTruthVersion = '1.4.5'
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
+    }
+}
+
+
+// build config
+configure(androidLibraryProjects()) {
+    apply plugin: 'com.android.library'
+
+    android {
+        compileSdkVersion 35
+        testOptions.unitTests.includeAndroidResources = true
+
+        defaultConfig {
+            // set minSdkVersion per subproject
+            targetSdkVersion 35
+            // versions are copied here from the properties to improve build time. See the version.gradle script.
+            versionCode Integer.parseInt(project.findProperty('versionCode'))
+            versionName project.findProperty('version')
+            testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        }
+
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+                crunchPngs false
+            }
+
+            debug {
+                debuggable true
+            }
+        }
+
+        compileOptions {
+            // Sets Java compatibility to Java 8
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+
+        lintOptions {
+            // disable lint in projects
+            // add lint in app, including dependencies
+            tasks.lint.enabled = false
+        }
+
+        testOptions {
+            unitTests {
+                all {
+                    maxHeapSize = "4g"
+                }
+                returnDefaultValues = true
+            }
+        }
+
+        buildFeatures {
+            buildConfig = false
+        }
+
+        packagingOptions {
+            exclude 'META-INF/INDEX.LIST'
+            exclude 'META-INF/DEPENDENCIES'
+            exclude 'META-INF/LICENSE'
+            exclude 'META-INF/LICENSE.md'
+            exclude 'META-INF/LICENSE.txt'
+            exclude 'META-INF/license.txt'
+            exclude 'META-INF/LICENSE-notice.md'
+            exclude 'META-INF/NOTICE'
+            exclude 'META-INF/NOTICE.txt'
+            exclude 'META-INF/notice.txt'
+            exclude 'META-INF/ASL2.0'
+        }
+    }
+
+    dependencies commonDependencies
+}
+
+
+// quality control + release
+configure(androidLibraryProjects()) {
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
+    android {
+        publishing {
+            singleVariant('release') {
+                withSourcesJar()
+                withJavadocJar()
+            }
+        }
+    }
+
+    afterEvaluate {
+        publishing {
+            publications {
+                release(MavenPublication) {
+                    from components.findByName('release')
+
+                    groupId "$groupId"
+                    artifactId "${!project.ext.has('artifactId') ? project.name : project.ext.artifactId}"
+                    version = android.defaultConfig.versionName
+
+                    pom {
+                        name = "${!project.ext.has('artifactId') ? project.name : project.ext.artifactId}"
+                        description = 'HWB utilities'
+                        url = 'https://github.com/entur/hwb-utilities'
+                        packaging = 'aar'
+                        inceptionYear = '2025'
+                        licenses {
+                            license {
+                                name = 'European Union Public Licence v1.2'
+                                url = 'https://www.eupl.eu/'
+                                distribution = 'repo'
+                            }
+                        }
+                        developers {
+                            developer {
+                                id = "skjolber"
+                                name = "Thomas Skjølberg"
+                                email = "thomas.rorvik.skjolberg@entur.org"
+                            }
+                        }
+                        scm {
+                            url = 'https://github.com/entur/hwb-utilities'
+                            connection = 'git@github.com:entur/hwb-utilities.git'
+                        }
+                    }
+                }
+            }
+        }
+        if(project.hasProperty("signing.gnupg.keyName")) {
+            signing {
+                useGpgCmd()
+
+                // set
+                // signing.gnupg.keyName=xxx
+                // signing.gnupg.passphrase=yyy
+                // via command line
+
+                sign publishing.publications.release
+            }
+        }
+    }
+}
+
+
+configure(javaLibraryProjects()) {
+
+    apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
+    repositories repos
+
+    java {
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+
+        withJavadocJar()
+        withSourcesJar()
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
+
+    afterEvaluate {
+        publishing {
+            publications {
+                // Creates a Maven publication called "release".
+                release(MavenPublication) {
+                    // Applies the component for the release build variant.
+                    from components.java
+
+                    groupId "$groupId"
+                    artifactId "${!project.ext.has('artifactId') ? project.name : project.ext.artifactId}"
+                    version = "$version"
+
+                    pom {
+                        name = "${!project.ext.has('artifactId') ? project.name : project.ext.artifactId}"
+                        description = 'HWB utilities'
+                        url = 'https://github.com/entur/hwb-utilities'
+                        packaging = 'jar'
+                        inceptionYear = '2025'
+                        licenses {
+                            license {
+                                name = 'European Union Public Licence v1.2'
+                                url = 'https://www.eupl.eu/'
+                                distribution = 'repo'
+                            }
+                        }
+                        developers {
+                            developer {
+                                id = "skjolber"
+                                name = "Thomas Skjølberg"
+                                email = "thomas.rorvik.skjolberg@entur.org"
+                            }
+                        }
+                        scm {
+                            url = 'https://github.com/entur/hwb-utilities'
+                            connection = 'git@github.com:entur/hwb-utilities.git'
+                        }
+                    }
+                }
+            }
+            if(project.hasProperty("signing.gnupg.keyName")) {
+                signing {
+                    useGpgCmd()
+
+                    // set
+                    // signing.gnupg.keyName=xxx
+                    // signing.gnupg.passphrase=yyy
+                    // via command line
+
+                    sign publishing.publications.release
+                }
+            }
+        }
+
     }
 
     test {
         useJUnitPlatform {
             includeEngines 'junit-jupiter', 'junit-vintage'
         }
-    }
 
-    dependencies {
-        components.all(JunitAlignmentRule)
-
-        // JUnit Jupiter API and TestEngine implementation
-        testImplementation("org.junit.jupiter:junit-jupiter:${junitJupiterVersion}")
-
-        // https://stackoverflow.com/questions/79640685/cannot-build-project-after-upgrading-spring-boot-to-3-5
-        testRuntimeOnly "org.junit.platform:junit-platform-launcher:1${junitJupiterVersion.substring(1)}"
-        testImplementation("org.mockito:mockito-core:${mockitoVersion}")
-
-        testImplementation("com.google.truth:truth:${googleTruthVersion}")
-        testImplementation("com.google.truth.extensions:truth-java8-extension:${googleTruthVersion}")
-    }
-
-    // from https://github.com/ben-manes/gradle-versions-plugin?tab=readme-ov-file#rejectversionsif-and-componentselection
-    def isNonStable = { String version ->
-        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { ita -> version.toUpperCase().contains(ita) }
-        def regex = /^[0-9,.v-]+(-r)?$/
-        return !stableKeyword && !(version ==~ regex)
-    }
-
-    tasks.named("dependencyUpdates").configure {
-        rejectVersionIf {
-            isNonStable(it.candidate.version)
-        }
     }
 }
 
-allprojects {
-    apply plugin: 'eclipse'
-    apply plugin: 'idea'
-
-    eclipse {
-        classpath {
-            downloadSources = true
-            downloadJavadoc = true
-        }
-    }
-
-    idea {
-        module {
-            downloadJavadoc = true
-            downloadSources = true
-        }
-    }
-
+nexusPublishing {
     repositories {
-        mavenLocal()
-        mavenCentral()
-    }
-
-}
-
-abstract class JunitAlignmentRule implements ComponentMetadataRule {
-    void execute(ComponentMetadataContext ctx) {
-        ctx.details.with {
-            if (id.group.startsWith("org.junit.jupiter ")) {
-                belongsTo("org.junit.jupiter:junit-virtual-platform:${id.version}")
-            }
+        // see https://central.sonatype.org/publish/publish-portal-ossrh-staging-api/#configuration
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
         }
     }
 }
 
 
-task clean {
-}
-
-apply plugin: 'org.jreleaser'
-
-jreleaser {
-    signing {
-        active = 'ALWAYS'
-        armored = true
-    }
-    deploy {
-        maven {
-            mavenCentral {
-                release {
-                    active = 'RELEASE'
-                    url = 'https://central.sonatype.com/api/v1/publisher'
-                    stagingRepository(stagingRepositoryPath)
-                }
-            }
-            nexus2 {
-                snapshot {
-                    active = 'SNAPSHOT'
-                    applyMavenCentralRules = true
-                    snapshotSupported = true
-                    closeRepository = true
-                    releaseRepository = true
-                    url = "https://ossrh-staging-api.central.sonatype.com/service/local"
-                    snapshotUrl = 'https://central.sonatype.com/repository/maven-snapshots/'
-                    stagingRepository(stagingRepositoryPath)
-                }
-            }
-        }
-    }
-    release {
-        github {
-            skipTag = false // Skip creating a new github tag?
-            skipRelease = true // Skip creating a new github release?
-        }
-    }
-}
