--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,6 @@ org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx8G -Xms2G
 org.gradle.parallel=true
-version=2.0.11-SNAPSHOT
-versionCode=31
+version=1.0.0-SNAPSHOT
+versionCode=1
+group=hwb.utilities
