--- a/hwb-messages-java-lib/build.gradle
+++ b/hwb-messages-java-lib/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 jsonSchema2Pojo { // https://github.com/joelittlejohn/jsonschema2pojo/tree/master/jsonschema2pojo-gradle-plugin
-  targetPackage = 'hwb.utilities.message'
+  targetPackage = 'hwb.utilities'
   source = files(rootProject.file("specifications"))
   includeGeneratedAnnotation = false
   // TODO update date format once android can do the same
