--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,11 @@ allprojects {
 ext {
     jacksonVersion = '2.20.1'
     junitVersion = '4.13.2'
+    junitJupiterVersion = '5.14.1'
     javaWebSocketVersion = '1.6.0'
     hivemqMqttClientVersion = '1.2.1'
     nettyVersion = '4.1.48.Final'
+    slf4jVersion = '2.0.7'
 }
 
 ext.commonDependencies = {
@@ -291,6 +293,16 @@ configure(javaLibraryProjects()) {
             includeEngines 'junit-jupiter', 'junit-vintage'
         }
 
+    }
+
+    dependencies {
+        testImplementation platform("org.junit:junit-bom:${junitJupiterVersion}") // Use the desired JUnit 5 version
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
+
+        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     }
 }
 
